<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="B_4_2_PRG_Master_ProcessDoor" Id="{53a11cee-2388-4375-a004-26a2c48b086a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM B_4_2_PRG_Master_ProcessDoor

VAR

	bEventsFlag							: ARRAY [0..100] OF BOOL;
/////////////////////////////////////////////////////////////////////////////////////I O/////////////////////////////////////////////////////////////////////////////////////	
	
	bOpenDoor							: BOOL;
	bCloseDoor							: BOOL;
	bDoorClosed							: BOOL;
	bDoorOpened							: BOOL;
	tonDoorOpened						: TON;

	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[d_ACT_Set_Events_Station_4B();
a_ACT_Ctrl_Station_4B();
b_ACT_IO_B();
]]></ST>
    </Implementation>
    <Action Name="a_ACT_Ctrl_Station_4B" Id="{08b1d871-01b9-45fa-bb18-30d558502fc6}">
      <Implementation>
        <ST><![CDATA[/////////////////////////////////////////////////////////////////////////////////////UTILITIES/////////////////////////////////////////////////////////////////////////////////////

/////////////////////////////////////////////////////////////////////////////////////CONDITIONS/////////////////////////////////////////////////////////////////////////////////////
IF stProcessDoor.CMD.bAbort THEN
	
	stProcessDoor.State				:= E_ProcessDoor_State.RESET;
	
ELSIF stProcessDoor.CMD.bEndCycle THEN
	
	stProcessDoor.State				:= E_ProcessDoor_State.STOPPING;

END_IF

CASE stProcessDoor.State OF
	
	E_ProcessDoor_State.ABORTED:
	
								IF stProcessDoor.CMD.bEnable THEN
									
									stProcessDoor.State				:= E_ProcessDoor_State.READY;
								
								END_IF
	
	E_ProcessDoor_State.READY:
	
								IF stProcessDoor.CMD.bExecute AND 	stProcessDoor.CMD.ProcessDoorCMD.OpenDoor	THEN

									stProcessDoor.State				:= E_ProcessDoor_State.OPEN;
									
								ELSIF stProcessDoor.CMD.bExecute AND 	stProcessDoor.CMD.ProcessDoorCMD.CloseDoor	THEN
									
									stProcessDoor.State				:= E_ProcessDoor_State.CLOSE;									
																		
								END_IF
	
	E_ProcessDoor_State.OPEN:
	
								bOpenDoor							:= TRUE;
								
								IF bDoorOpened	THEN
									
									stProcessDoor.State				:= E_ProcessDoor_State.DONE;
								
								END_IF
								
	E_ProcessDoor_State.CLOSE:
	
								bCloseDoor							:= TRUE;
								
								IF bDoorClosed THEN
									
									stProcessDoor.State				:= E_ProcessDoor_State.DONE;
								
								END_IF
								
	E_ProcessDoor_State.DONE:
	
								bOpenDoor							:= FALSE;
								bCloseDoor							:= FALSE;
	
								IF stProcessDoor.CMD.bAcknowledge THEN
									
									stProcessDoor.CMD.bAcknowledge	:= FALSE;
									stProcessDoor.State				:= E_ProcessDoor_State.RESET;
								
								END_IF
	
	
	E_ProcessDoor_State.RESET:	
	
								bOpenDoor							:= FALSE;
								bCloseDoor							:= FALSE;
								
								IF NOT stProcessDoor.CMD.bAbort AND NOT stProcessDoor.CMD.bEndCycle THEN
									
									stProcessDoor.State				:= E_ProcessDoor_State.OPEN;
									
								ELSE stProcessDoor.State			:= E_ProcessDoor_State.ABORTED;
								END_IF
	
					
	E_ProcessDoor_State.STOPPING:					
									
								bOpenDoor							:= TRUE;
									
								IF bDoorOpened THEN
									
									bOpenDoor						:= FALSE;
									stProcessDoor.State				:= E_ProcessDoor_State.RESET;
								
								END_IF
								
							
														
									

ELSE stProcessDoor.State		:= E_ProcessDoor_State.ABORTED;
	
END_CASE
/////////////////////////////////////////////////////////////////////////////////////STATUS/////////////////////////////////////////////////////////////////////////////////////

stProcessDoor.Status.bBusy			:= 	stProcessDoor.State	= E_ProcessDoor_State.CLOSE OR
										stProcessDoor.State	= E_ProcessDoor_State.OPEN;
								
stProcessDoor.Status.bDone			:=	stProcessDoor.State	= E_ProcessDoor_State.DONE;

stProcessDoor.Status.bReady			:= 	stProcessDoor.State	= E_ProcessDoor_State.READY;

stProcessDoor.Status.bStopped		:= 	NOT stProcessDoor.Status.bBusy;]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_ACT_IO_B" Id="{7a24ac88-21cc-4219-af73-2aba76419ebf}">
      <Implementation>
        <ST><![CDATA[tonDoorOpened( IN := NOT bDoorClosed AND bDoorOpeningFlag	, PT := stTimers.tDoorOpenedSignal);


bDoorClosed								:= stTwinSAFE.qProcessDoorClosed;
bDoorOpened								:= tonDoorOpened.Q; 

dw_T09_EL2809.qOpenProcessDoor	:= bOpenDoor;	
dw_T09_EL2809.qCloseProcessDoor	:= bCloseDoor;


]]></ST>
      </Implementation>
    </Action>
    <Action Name="d_ACT_Set_Events_Station_4B" Id="{6917e64e-8f14-430a-8afe-2820b830fd4d}">
      <Implementation>
        <ST><![CDATA[//IMMEDIATE FAULTS

stStationEvents[3].aEvents[0].bFault						:= TRUE;
stStationEvents[3].aEvents[0].bEventFlag					:= bEventsFlag[0];
stStationEvents[3].aEvents[0].bEventText					:= 'ST1 EVENT 0';
stStationEvents[3].aEvents[0].sSolution						:= 'Solution 5';



//CYCLE STOP REQUEST

stStationEvents[3].aEvents[2].bCycleStopRequest			:= TRUE;
stStationEvents[3].aEvents[2].bEventFlag					:= bEventsFlag[2];
stStationEvents[3].aEvents[2].bEventText					:= 'ST1 EVENT 7';]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="B_4_2_PRG_Master_ProcessDoor">
      <LineId Id="327" Count="2" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="B_4_2_PRG_Master_ProcessDoor.a_ACT_Ctrl_Station_4B">
      <LineId Id="130" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="329" Count="1" />
      <LineId Id="328" Count="0" />
      <LineId Id="331" Count="0" />
      <LineId Id="333" Count="0" />
      <LineId Id="332" Count="0" />
      <LineId Id="327" Count="0" />
      <LineId Id="3" Count="1" />
      <LineId Id="166" Count="4" />
      <LineId Id="172" Count="1" />
      <LineId Id="171" Count="0" />
      <LineId Id="5" Count="1" />
      <LineId Id="158" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="218" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="254" Count="1" />
      <LineId Id="221" Count="0" />
      <LineId Id="257" Count="1" />
      <LineId Id="222" Count="0" />
      <LineId Id="12" Count="1" />
      <LineId Id="159" Count="0" />
      <LineId Id="245" Count="0" />
      <LineId Id="366" Count="2" />
      <LineId Id="370" Count="1" />
      <LineId Id="369" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="286" Count="2" />
      <LineId Id="290" Count="0" />
      <LineId Id="285" Count="0" />
      <LineId Id="372" Count="0" />
      <LineId Id="374" Count="1" />
      <LineId Id="373" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="211" Count="1" />
      <LineId Id="376" Count="0" />
      <LineId Id="378" Count="0" />
      <LineId Id="377" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="280" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="284" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="174" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="165" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="379" Count="0" />
      <LineId Id="318" Count="1" />
      <LineId Id="323" Count="0" />
      <LineId Id="321" Count="0" />
      <LineId Id="324" Count="1" />
      <LineId Id="322" Count="0" />
      <LineId Id="320" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="359" Count="0" />
      <LineId Id="350" Count="1" />
      <LineId Id="353" Count="2" />
      <LineId Id="357" Count="1" />
      <LineId Id="348" Count="0" />
      <LineId Id="361" Count="0" />
      <LineId Id="341" Count="0" />
      <LineId Id="334" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="61" Count="2" />
      <LineId Id="1" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="346" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="95" Count="0" />
    </LineIds>
    <LineIds Name="B_4_2_PRG_Master_ProcessDoor.b_ACT_IO_B">
      <LineId Id="34" Count="1" />
      <LineId Id="15" Count="2" />
      <LineId Id="31" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="27" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="B_4_2_PRG_Master_ProcessDoor.d_ACT_Set_Events_Station_4B">
      <LineId Id="50" Count="6" />
      <LineId Id="64" Count="5" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>